<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary"
    tools:context=".presentation.tasks.TasksFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:backgroundTint="@color/back_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_tasks_expanded_app_bar_height"
            app:contentScrim="@color/back_primary"
            app:collapsedTitleTextColor="@color/label_primary"
            app:expandedTitleTextColor="@color/label_primary"
            android:minHeight="?attr/actionBarSize"
            app:collapsedTitleTextAppearance="@style/TextAppearance.Pasha.TitleMedium"
            app:expandedTitleMarginBottom="54dp"
            app:expandedTitleMarginStart="@dimen/all_tasks_app_bar_text_margin_start"
            app:expandedTitleTextAppearance="@style/TextAppearance.Pasha.TitleLarge"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/tasks_toolbar_my_business_title"
            app:titleCollapseMode="scale"
            app:titleEnabled="true"
            app:toolbarId="@id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                android:paddingStart="0dp"
                android:paddingEnd="12dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/tasks_menu" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFinishedTasks"
                android:textColor="@color/label_tertiary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/all_tasks_app_bar_text_margin_start"
                android:text="@string/tasks_toolbar_finished_todo_subtitle"
                android:textAppearance="@style/TextAppearance.Pasha.Body"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1.5" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.card.MaterialCardView
            android:backgroundTint="@color/back_secondary"
            android:layout_width="match_parent"
            app:strokeWidth="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/all_tasks_card_horizontal_margin"
            android:layout_marginBottom="16dp"
            app:cardElevation="@dimen/all_tasks_tasks_card_elevation">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTasksList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/all_tasks_card_content_vertical_margin" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCrateTask"
        app:tint="@color/color_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/color_blue"
        android:layout_marginEnd="@dimen/all_tasks_add_fab_margin_end"
        android:layout_marginBottom="@dimen/all_tasks_add_fab_margin_bottom"
        android:contentDescription="@string/fab_create_new_task_content_desc"
        app:shapeAppearanceOverlay="@style/CircleShape"
        app:srcCompat="@drawable/ic_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>